--- a/TravelTogether/Views/Shared/_Layout.cshtml
+++ b/TravelTogether/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-secondary">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,9 +56,8 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container-fluid body-content bg-secondary">
+    <div class="container-fluid body-content">
         @RenderBody()
-        <hr />
     </div>
     <footer class="bg-dark">
         <h3 class="text-center text-muted pt-3">&copy; 2018 - TravelTogether</h3>
