--- a/TravelTogether/wwwroot/css/site.css
+++ b/TravelTogether/wwwroot/css/site.css
@@ -1,8 +1,21 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #333333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
+    width: 100%;
+    height: 10%;
 }
 
 /* Wrapping element */
@@ -35,3 +48,99 @@ body {
         display: none;
     }
 }
+
+/*Register page*/
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+
+.owl {
+    margin: auto;
+    margin-top: 20px;
+    width: 211px;
+    height: 108px;
+    background-image: url("https://dash.readme.io/img/owl-login.png");
+    position: relative;
+}
+
+    .owl .hand {
+        width: 34px;
+        height: 34px;
+        border-radius: 40px;
+        background-color: #472d20;
+        transform: scaleY(0.6);
+        position: absolute;
+        left: 14px;
+        bottom: -8px;
+        transition: 0.3s ease-out;
+    }
+
+        .owl .hand.password {
+            transform: translateX(42px) translateY(-15px) scale(0.7);
+        }
+
+        .owl .hand.hand-r {
+            left: 170px;
+        }
+
+            .owl .hand.hand-r.password {
+                transform: translateX(-42px) translateY(-15px) scale(0.7);
+            }
+
+    .owl .arms {
+        position: absolute;
+        top: 58px;
+        height: 41px;
+        width: 100%;
+        overflow: hidden;
+    }
+
+        .owl .arms .arm {
+            width: 40px;
+            height: 65px;
+            background-image: url("https://dash.readme.io/img/owl-login-arm.png");
+            position: absolute;
+            left: 20px;
+            top: 40px;
+            transition: 0.3s ease-out;
+        }
+
+            .owl .arms .arm.password {
+                transform: translateX(40px) translateY(-40px);
+            }
+
+            .owl .arms .arm.arm-r {
+                left: 158px;
+                transform: scaleX(-1);
+            }
+
+                .owl .arms .arm.arm-r.password {
+                    transform: translateX(-40px) translateY(-40px) scaleX(-1);
+                }
+
+.register-form {
+    margin: auto;
+    margin-top: -9px;
+    padding: 30px;
+    background-color: #506270;
+    width: 265px;
+}
+
+    .register-form .control {
+        margin-bottom: 10px;
+        position: relative;
+    }
+
+        .register-form .control label {
+            position: absolute;
+            font-size: 16px;
+            top: 11px;
+            left: 9px;
+            color: rgba(0,0,0,0.3);
+        }
+
+        .register-form .control input {
+            padding: 9px 6px 9px 30px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+        }
