--- a/TravelTogether/Views/Account/Register.cshtml
+++ b/TravelTogether/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 }
 
 @section Links{
-
+    <link rel="stylesheet" type="text/css" href="~/css/register.css" />
 }
 
 <div class="owl">
@@ -17,38 +17,39 @@
         <div class="arm arm-r"></div>
     </div>
 </div>
-<form method="post" action="/Account/Register">
+<form asp-controller="Account" asp-action="Register">
     <div class="register-form">
         <div class="control">
-            <label for="username"></label>
-            <input id="username" placeholder="Username" name="Username" type="text" />           
+            <input asp-for="Username" placeholder="Username"/>
+            <span asp-validation-for="Username"></span>
         </div>
         <div class="control">
-            <label for="password"></label>
-            <input id="password" placeholder="Password" name="Password" type="password" />
+            <input asp-for="Password" placeholder="Password"/>
+            <span asp-validation-for="Password"></span>
         </div>
         <div class="control">
-            <label for="confirmPassword"></label>
-            <input id="confirmPassword" placeholder="Confirm Password" name="ConfirmPassword" type="password" />
+            <input asp-for="ConfirmPassword" placeholder="Confirm Password"/>
+            <span asp-validation-for="ConfirmPassword"></span>
         </div>
         <div class="control">
-            <label for="firstName"></label>
-            <input id="firstName" placeholder="First Name" name="FirstName" type="text" />
+            <input asp-for="FirstName" placeholder="First Name"/>
+            <span asp-validation-for="FirstName"></span>
         </div>
         <div class="control">
-            <label for="lastName"></label>
-            <input id="lastName" placeholder="Last Name" name="LastName" type="text" />
+            <input asp-for="LastName" placeholder="Last Name"/>
+            <span asp-validation-for="LastName"></span>
         </div>
         <div class="control">
-            <label for="country"></label>
-            <input id="country" placeholder="Country" name="Country" type="text" />
+            <input asp-for="Country" placeholder="Country"/>
+            <span asp-validation-for="Country"></span>
         </div>
         <div class="control">
-            <label for="city"></label>
-            <input id="city" placeholder="City" name="City" type="text" />
+            <input asp-for="City" placeholder="City"/>
+            <span asp-validation-for="City"></span>
         </div>
         <div class="control">
-            <span class="ui grey inverted header">Male : </span>@Html.RadioButtonFor(m => m.Gender, "Male", new { id="Gender1"})
+            <span class="ui grey inverted header">Male : </span>@Html.RadioButtonFor(m => m.Gender, "Male", new { id = "Gender1" })
+            <span asp-validation-for="Gender"></span>
             <span class="ui grey inverted header">Female : </span>@Html.RadioButtonFor(m => m.Gender, "Female", new { id = "Gender2" })
         </div>
         <div class="control">
@@ -60,4 +61,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="~/js/register.js"></script>
 }
