--- a/TravelTogether/Views/Home/Index.cshtml
+++ b/TravelTogether/Views/Home/Index.cshtml
@@ -1,23 +1,192 @@
-﻿@{
+﻿
+@inject UserManager<IdentityUser> UserManager
+
+@{
     ViewData["Title"] = "Home Page";
+    var currentUser = await UserManager.GetUserAsync(this.User);
+    var isAuthenthicated = this.User?.Identity?.IsAuthenticated;
 }
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+@section Links{
+    <link rel="stylesheet" type="text/css" href="~/css/posts.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/index.css" />
+}
+
+@if (isAuthenthicated.HasValue && isAuthenthicated.Value)
+{
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="ui teal card my_card">
+                    <div class="content">
+                        <div class="right floated meta">
+                            <span class="ui grey inverted header">@DateTime.Now.Year</span>
+                        </div>
+                        <img class="ui avatar image" src="~/images/sample.jpg">
+                        <span class="ui grey inverted header my_username_header">martoXD</span>
+                    </div>
+                    <div class="image">
+                        <img src="~/images/sample.jpg" />
+                    </div>
+                    <div class="content">
+                        <span class="right floated">
+                            <i class="heart outline like icon"></i>
+                            <span>17 likes</span>
+                        </span>
+                        <i class="comment icon"></i>
+                        <span>3 comments</span>
+                        <div class="d-flex justify-content-center">
+                            <a href="#" data-toggle="modal" data-target="#post_Modal">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <div class="ui large transparent left icon input">
+                            <i class="heart outline icon"></i>
+                            <input class="postInput" type="text" placeholder="Add Comment...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more
-                </a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a>
-            </li>
-        </ul>
+    <div class="sidebar bg-dark">
+        <div class="ui middle aligned selection list">
+            <div class="item">
+                <img class="ui avatar image" src="~/images/sample.jpg">
+                <div class="content">
+                    <div class="header">Helen</div>
+                </div>
+                <div class="my_content_friendUser">
+                    <i class="envelope outline icon ml-3"></i>
+                    <i class="clone outline icon ml-3"></i>
+                    <i class="trash alternate outline icon ml-3"></i>
+                </div>
+            </div>
+            <div class="item">
+                <img class="ui avatar image" src="~/images/sample.jpg">
+                <div class="content">
+                    <div class="header">Christian</div>
+                </div>
+                <div class="my_content_friendUser">
+                    <i class="envelope outline icon ml-3"></i>
+                    <i class="clone outline icon ml-3"></i>
+                    <i class="trash alternate outline icon ml-3"></i>
+                </div>
+            </div>
+            <div class="item">
+                <img class="ui avatar image" src="~/images/sample.jpg">
+                <div class="content">
+                    <div class="header">Daniel</div>
+                </div>
+                <div class="my_content_friendUser">
+                    <i class="envelope outline icon ml-3"></i>
+                    <i class="clone outline icon ml-3"></i>
+                    <i class="trash alternate outline icon ml-3"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+else
+{
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="ui teal card my_card">
+                    <div class="content">
+                        <div class="right floated meta">
+                            <span class="ui grey inverted header">@DateTime.Now.Year</span>
+                        </div>
+                        <img class="ui avatar image" src="~/images/sample.jpg">
+                        <span class="ui grey inverted header my_username_header">martoXD</span>
+                    </div>
+                    <div class="image">
+                        <img src="~/images/sample.jpg" />
+                    </div>
+                    <div class="content">
+                        <span class="right floated">
+                            <i class="heart outline like icon"></i>
+                            <span>17 likes</span>
+                        </span>
+                        <i class="comment icon"></i>
+                        <span>3 comments</span>
+                    </div>
+                    <div class="extra content">
+                        <div class="d-flex justify-content-center">
+                            <a href="#" data-toggle="modal" data-target="#post_Modal">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@*PostModal*@
+<div class="modal fade" id="post_Modal">
+    <div class="modal-dialog">
+        <div class="modal-content my_modal">
+            <div class="modal-body">
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+                <div class="ui card my_card_modal">
+                    <div class="content">
+                        <div class="right floated meta">
+                            <span class="ui grey inverted header">@DateTime.Now.Year</span>
+                        </div>
+                        <img class="ui avatar image my_modal_avatar_image" src="~/images/sample.jpg">
+                        <span class="ui grey inverted header my_username_header_modal">martoXD</span>
+                    </div>
+                    <div class="image">
+                        <img src="~/images/sample.jpg" />
+                    </div>
+                    <div class="content">
+                        <span class="right floated">
+                            <i class="heart outline like icon"></i>
+                            <span>17 likes</span>
+                        </span>
+                        <i class="comment icon"></i>
+                        <span>3 comments</span>
+                    </div>
+                    <div class="extra content">
+                        <div class="ui comments">
+                            <div class="comment">
+                                <a class="avatar">
+                                    <img src="~/images/sample.jpg">
+                                </a>
+                                <div class="content">
+                                    <a class="author">Stevie Feliciano</a>
+                                    <div class="metadata">
+                                        <div class="date">2 days ago</div>
+                                    </div>
+                                    <div class="text">
+                                        Hey guys, I hope this example comment is helping you read this documentation.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <form id="my_post_modal_form">
+                            <div class="form-group my_form-group_modal">
+                                <textarea class="form-control" rows="3" placeholder="Add Comment..."></textarea>
+                            </div>
+                            <div class="d-flex justify-content-around">
+                                <a href="#" onclick="sendComment()" class="ui black button">Add Comment</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/index.js"></script>
+}
