--- a/TravelTogether/Views/Shared/_LoginPartial.cshtml
+++ b/TravelTogether/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,5 @@
-@using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<TtUser> SignInManager
+@inject UserManager<TtUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
