--- a/TravelTogether/wwwroot/css/site.css
+++ b/TravelTogether/wwwroot/css/site.css
@@ -49,98 +49,48 @@ footer {
     }
 }
 
-/*Register page*/
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+/* Dropdown Button */
+.my_dropdownbutton {
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 0px;
+}
 
-.owl {
-    margin: auto;
-    margin-top: 20px;
-    width: 211px;
-    height: 108px;
-    background-image: url("https://dash.readme.io/img/owl-login.png");
+/* The container <div> - needed to position the dropdown content */
+.my_dropdown {
     position: relative;
+    display: inline-block;
 }
 
-    .owl .hand {
-        width: 34px;
-        height: 34px;
-        border-radius: 40px;
-        background-color: #472d20;
-        transform: scaleY(0.6);
-        position: absolute;
-        left: 14px;
-        bottom: -8px;
-        transition: 0.3s ease-out;
-    }
-
-        .owl .hand.password {
-            transform: translateX(42px) translateY(-15px) scale(0.7);
-        }
-
-        .owl .hand.hand-r {
-            left: 170px;
-        }
-
-            .owl .hand.hand-r.password {
-                transform: translateX(-42px) translateY(-15px) scale(0.7);
-            }
-
-    .owl .arms {
-        position: absolute;
-        top: 58px;
-        height: 41px;
-        width: 100%;
-        overflow: hidden;
-    }
-
-        .owl .arms .arm {
-            width: 40px;
-            height: 65px;
-            background-image: url("https://dash.readme.io/img/owl-login-arm.png");
-            position: absolute;
-            left: 20px;
-            top: 40px;
-            transition: 0.3s ease-out;
-        }
-
-            .owl .arms .arm.password {
-                transform: translateX(40px) translateY(-40px);
-            }
-
-            .owl .arms .arm.arm-r {
-                left: 158px;
-                transform: scaleX(-1);
-            }
-
-                .owl .arms .arm.arm-r.password {
-                    transform: translateX(-40px) translateY(-40px) scaleX(-1);
-                }
-
-.register-form {
-    margin: auto;
-    margin-top: -9px;
-    padding: 30px;
-    background-color: #506270;
-    width: 265px;
+/* Dropdown Content (Hidden by Default) */
+.my_dropdown_content {
+    display: none;
+    position: absolute;
+    left: -135px;
+    top: 24px;
+    background-color: #76808e;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 10px;
 }
 
-    .register-form .control {
-        margin-bottom: 10px;
-        position: relative;
+    /* Links inside the dropdown */
+    .my_dropdown_content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        border-radius: 10px;
     }
 
-        .register-form .control label {
-            position: absolute;
-            font-size: 16px;
-            top: 11px;
-            left: 9px;
-            color: rgba(0,0,0,0.3);
+        /* Change color of dropdown links on hover */
+        .my_dropdown_content a:hover {
+            background-color: #ddd
         }
 
-        .register-form .control input {
-            padding: 9px 6px 9px 30px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            font-size: 14px;
-        }
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+    display: block;
+}
