--- a/TravelTogether/Views/_ViewImports.cshtml
+++ b/TravelTogether/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TravelTogether
 @using TravelTogether.Models
+@using TravelTogether.ViewModels.Trips
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
