--- a/TravelTogether/Views/Account/Register.cshtml
+++ b/TravelTogether/Views/Account/Register.cshtml
@@ -20,8 +20,8 @@
 <form asp-controller="Account" asp-action="Register">
     <div class="register-form">
         <div class="control">
-            <input asp-for="Username" placeholder="Username"/>
-            <span asp-validation-for="Username"></span>
+            <input asp-for="UserName" placeholder="Username"/>
+            <span asp-validation-for="UserName"></span>
         </div>
         <div class="control">
             <input asp-for="Password" placeholder="Password"/>
