--- a/TravelTogether/Views/Home/Index.cshtml
+++ b/TravelTogether/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@inject UserManager<IdentityUser> UserManager
+﻿@model List<TravelTogether.ViewModels.Posts.AllPostsViewModel>
+
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Home Page";
@@ -13,43 +15,69 @@
 
 @if (isAuthenthicated.HasValue && isAuthenthicated.Value)
 {
-    <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 col-md-12 d-flex justify-content-center">
+            <div class="ui icon input my_search">
+                <input type="text" placeholder="Search...">
+                <i class="inverted circular search link icon"></i>
+            </div>
+            <div class="my_addPost_btn ml-4">
+                <a href="#" data-toggle="modal" data-target="#createPost_Modal" class="ui button">
+                    + Add New Post
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid my_posts_container">
         <div class="row">
-            <div class="col-md-3">
-                <div class="ui teal card my_card">
-                    <div class="content">
-                        <div class="right floated meta">
-                            <span class="ui grey inverted header">@DateTime.Now.Year</span>
+            @{ var number = 1; }
+            @foreach (var post in Model)
+            {
+                <div class="col-md-3">
+                    <div class="ui teal card my_card">
+                        <div class="content">
+                            <div class="right floated meta">
+                                <span class="ui grey inverted header">@post.CreatedOn.ToString("dd-MMM-yy")</span>
+                            </div>
+                            <img class="ui avatar image" src="@post.TtUser.ProfileImageSrc">
+                            <span class="ui grey inverted header my_username_header">@post.TtUser.UserName</span>
                         </div>
-                        <img class="ui avatar image" src="~/images/sample.jpg">
-                        <span class="ui grey inverted header my_username_header">martoXD</span>
-                    </div>
-                    <div class="image">
-                        <img src="~/images/sample.jpg" />
-                    </div>
-                    <div class="content">
-                        <span class="right floated">
-                            <i class="heart outline like icon"></i>
-                            <span>17 likes</span>
+                        <hr style="margin: 0px;" />
+                        <span style="margin-left: 15px;">
+                            @post.Caption
                         </span>
-                        <i class="comment icon"></i>
-                        <span>3 comments</span>
-                        <div class="d-flex justify-content-center">
-                            <a href="#" data-toggle="modal" data-target="#post_Modal">
-                                <span class="dot"></span>
-                                <span class="dot"></span>
-                                <span class="dot"></span>
-                            </a>
+                        <hr style="margin: 0px;" />
+                        <div class="image">
+                            <img class="my_post_image" src="@post.Image.ImageSource" />
                         </div>
-                    </div>
-                    <div class="extra content">
-                        <div class="ui large transparent left icon input">
-                            <i class="heart outline icon"></i>
-                            <input class="postInput" type="text" placeholder="Add Comment...">
+                        <div class="content">
+                            <span class="right floated">
+                                <i class="heart outline like icon"></i>
+                                <span>@post.Likes likes</span>
+                            </span>
+                            <i class="comment icon"></i>
+                            <span>@post.Comments.Count() comments</span>
+                            <div class="d-flex justify-content-center mt-2">
+                                <a href="#" data-toggle="modal" data-target="#post_Modal">
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            <div class="ui large transparent left icon input">
+                                <i class="heart outline icon"></i>
+                                <input id="commentData{@number++}" class="postInput" type="text"
+                                       placeholder="Add Comment..." name="commentData" />
+                                <a href="#" onclick="sendComment(@post.Id, '@currentUser.Id')">
+                                    <i class="fas fa-plus"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            }
         </div>
     </div>
     <div class="sidebar bg-dark">
@@ -143,6 +171,11 @@ else
                         <img class="ui avatar image my_modal_avatar_image" src="~/images/sample.jpg">
                         <span class="ui grey inverted header my_username_header_modal">martoXD</span>
                     </div>
+                    <hr style="margin: 0px;" />
+                    <span style="margin-left: 15px;">
+                        Caption goes here!
+                    </span>
+                    <hr style="margin: 0px;" />
                     <div class="image">
                         <img src="~/images/sample.jpg" />
                     </div>
@@ -184,6 +217,50 @@ else
                         }
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@*CreatePostModal*@
+<div class="modal fade" id="createPost_Modal">
+    <div class="modal-dialog">
+        <div class="modal-content my_modal">
+            <div class="modal-body">
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+                <form id="my_addpost_modal_form" asp-controller="Posts" asp-action="Add" method="post" enctype="multipart/form-data">
+                    <div class="my_addPost_container">
+                        <h1 style="text-align: center;">Add Post</h1>
+                        <hr class="my_hr_addPostModal" />
+
+                        <label for="caption"><b>Caption</b></label>
+                        <input id="caption" class="my_input_AddPostModal" type="text" placeholder="Caption.." name="caption" required />
+
+                        <label for="imageBrowes"><b>Image</b></label>
+                        <input type="file" name="Image" id="imageBrowes" class="ui inverted grey button my_input_AddPostModal" required />
+
+                        <hr class="my_hr_addPostModal" />
+
+                        <div id="imgPreview" class="thumbnail" style="display:none">
+                            <img class="img-responsive" id="targetImg" />
+                            <div class="caption">
+                                <a class="my_trash_addPostModal" href="#" onclick="ClearPreview()">
+                                    <i class="trash icon"></i>
+                                </a>
+                                <span id="description"></span>
+                            </div>
+                        </div>
+                        @if (currentUser != null)
+                        {
+                            <input type="hidden" value="@currentUser.Id" name="userId" />
+                        }
+                        <div class="d-flex justify-content-around">
+                            <button type="submit" id="btnUpload" class="ui black button my_addPostModal_btn mt-4">
+                                Add
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
